apps/istio/overlays/lab/gateway-listeners.patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  listeners:
    - name: http
      protocol: HTTP
      hostname: "*.lab.home.arpa"
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-argocd
      protocol: HTTPS
      port: 443
      hostname: "argocd.lab.home.arpa"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: argocd-tls
